# gpt-rs

./: .gitignore  Cargo.toml  blog.md  readme.md
benches/: attention_benchmark.rs
py-gpt/: activations.py  attention.py  dataset.py  generation.py  load_weights.py  loss.py  main.py  model.py  py_benchmark.py  tokenizer.py  train.py
src/: activations.rs  attention.rs  embedding.rs  file_loader.rs  file_operations.rs  gpt.rs  lib.rs  losses.rs  main.rs  module_list.rs  neural_net.rs  normalization.rs  optimizers.rs  rng.rs  simple_tokenizer.rs  tokenizer.rs  utils.rs
src/layers/: dropout.rs  linear.rs  mod.rs
