[package]
name = "gpt_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.9.1"
criterion = "0.6.0"
indexmap = "2.9.0"
once_cell = "1.21.3"
rand = "0.9.1"
regex = "1.11.1"
tiktoken-rs = "0.7.0"


[[bench]]
name = "attention_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }